examples/test/testpolicy247.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy247
  namespace: namespace8
spec:
  podSelector:
    matchLabels:
      key25: value17
      key39: value25
      key30: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value15
      podSelector:
        matchLabels:
          key11: value24
          key16: value17
          key40: value32
